force-app/main/default/objects/Budget__c/fields/Approved_CO_temp__c.field-meta.xml
<CustomField>
    <fullName>Approved_CO_temp__c</fullName>
    <label>Approved CO</label>
    <summarizedField>Budget_Item__c.Total_Approvals_CO__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>