force-app/main/default/objects/Budget__c/fields/Estimated_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Gross_Profit__c</fullName>
    <description>Total Sales Price - Total Costs</description>
    <formula>Total_Sales_Price__c  -  Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Sales Price - Total Costs</inlineHelpText>
    <label>Gross Margin ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>