force-app/main/default/objects/Budget__c/fields/Primary_Budget__c.field-meta.xml
<CustomField>
    <fullName>Primary_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field indicates that you want to use this budget to populate Budget related fields on the Project.</inlineHelpText>
    <label>Primary Budget</label>
    <type>Checkbox</type>
</CustomField>