force-app/main/default/objects/Budget__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <inlineHelpText>Rolled up Sales Price from Budget Line Items.</inlineHelpText>
    <label>Total Unit Sales Price</label>
    <summarizedField>Budget_Item__c.Sales_Price__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>