force-app/main/default/objects/Budget__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <inlineHelpText>Rollup of the Total Sales Price from the Budget Lines.</inlineHelpText>
    <label>Total Sales Price</label>
    <summarizedField>Budget_Item__c.Total_Sales_Price__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>