force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Type__c</columns>
    <columns>Original_Budget__c</columns>
    <columns>Projected_Costs__c</columns>
    <columns>Direct_Costs__c</columns>
    <columns>Committed_Costs__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Sales_Price__c</columns>
    <columns>Sales_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>